[package]

name = "lmdb"
version = "0.5.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Idiomatic and safe LMDB wrapper."
repository = "https://github.com/danburkert/lmdb-rs.git"
readme = "README.md"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
documentation = "http://danburkert.github.io/lmdb-rs/lmdb/index.html"

[dependencies.lmdb-sys]
path = "lmdb-sys"
version = "0.5.0"

[dependencies]
bitflags = "0.7"
libc = "0.2"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
