[package]

name = "lmdb"
version = "0.6.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Idiomatic and safe LMDB wrapper."
repository = "https://github.com/danburkert/lmdb-rs.git"
readme = "README.md"
documentation = "https://docs.rs/lmdb"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

[badges]
travis-ci = { repository = "danburkert/lmdb-rs" }
appveyor = { repository = "danburkert/lmdb-rs" }

[dependencies]
bitflags = "0.9"
libc = "0.2"
lmdb-sys = { path = "lmdb-sys" }

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
