[package]

name = "lmdb"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.8.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Idiomatic and safe LMDB wrapper."
repository = "https://github.com/danburkert/lmdb-rs.git"
readme = "README.md"
documentation = "https://docs.rs/lmdb"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

[badges]
travis-ci = { repository = "danburkert/lmdb-rs" }
appveyor = { repository = "danburkert/lmdb-rs" }

[workspace]
members = [
  "lmdb-sys",
]

[dependencies]
bitflags = "1"
libc = "0.2"
lmdb-sys = { version = "0.8.0", path = "lmdb-sys" }

[dev-dependencies]
rand = "0.4"
tempdir = "0.3"
byteorder = "1.0"
