[package]

name = "lmdb-sys"
version = "0.2.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

links = "lmdb"
build = "build.rs"

[lib]

name = "lmdb-sys"

[dependencies.rust-bindgen]
path = "../../rust-bindgen"

[build-dependencies.pkg-config]
pkg-config = "*"

[build-dependencies.gcc]
gcc = "*"
