[package]

name = "lmdb-sys"
version = "0.4.3"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
description = "Rust bindings for liblmdb."
repository = "https://github.com/danburkert/lmdb-rs.git"
readme = "../README.md"
documentation = "http://rust-ci.org/danburkert/lmdb-rs/doc/lmdb-sys/"

build = "build.rs"

[build-dependencies]
pkg-config = "*"
gcc = "*"
