[package]

name = "lmdb-sys"
version = "0.6.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
description = "Rust bindings for liblmdb."
repository = "https://github.com/danburkert/lmdb-rs.git"
readme = "../README.md"
documentation = "http://danburkert.github.io/lmdb-rs/lmdb_sys/index.html"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"
